[gd_scene load_steps=6 format=3 uid="uid://dcpfrl1bvkbfq"]

[ext_resource type="Texture2D" uid="uid://dsjck4p3tqyja" path="res://Ninja Adventure - Asset Pack/Actor/Characters/CaveLion2/SeparateAnim/Walk.png" id="1_ghrgn"]
[ext_resource type="Script" path="res://enemy.gd" id="1_tr1bw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l4pdc"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hs2s2"]
radius = 104.173

[sub_resource type="CircleShape2D" id="CircleShape2D_0w3en"]
radius = 13.0384

[node name="enemy" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_tr1bw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-8, -8)
texture = ExtResource("1_ghrgn")
centered = false
hframes = 4
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_l4pdc")

[node name="movebox" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="movebox"]
modulate = Color(2.76752e-07, 0.209891, 0.248671, 1)
shape = SubResource("CircleShape2D_hs2s2")

[node name="e_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="e_hitbox"]
shape = SubResource("CircleShape2D_0w3en")

[node name="damaged_timer" type="Timer" parent="."]

[connection signal="body_entered" from="movebox" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="movebox" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="e_hitbox" to="." method="_on_e_hitbox_body_entered"]
[connection signal="body_exited" from="e_hitbox" to="." method="_on_e_hitbox_body_exited"]
[connection signal="timeout" from="damaged_timer" to="." method="_on_damage_timer_timeout"]
